Clean up Java and Gradle build warnings