@@ -1,5 +1,6 @@
 # syntax=docker/dockerfile:experimental
 FROM eclipse-temurin:25-jdk AS build
+ENV JAVA_TOOL_OPTIONS=--enable-native-access=ALL-UNNAMED
 WORKDIR /workspace/app
 
 COPY . /workspace/app
@@ -11,6 +12,7 @@ RUN --mount=type=secret,id=USERNAME --mount=type=secret,id=PERSONAL_ACCESS_TOKEN
 RUN  mkdir -p build/dependency && (cd build/dependency; jar -xf ../libs/authorization-1.0.jar)
 
 FROM eclipse-temurin:25-jdk
+ENV JAVA_TOOL_OPTIONS=--enable-native-access=ALL-UNNAMED
 VOLUME /tmp
 ARG DEPENDENCY=/workspace/app/build/dependency
 
